Assertion failure in ResourceHandle::setDefersLoading(): d->m_defersLoading != defers https://bugs.webkit.org/show_bug.cgi?id=80543

Reviewed by Geoffrey Garen.

Reset m_defersLoading flag to the value from Page::defersCallbacks() in
ResourceLoader::init(). This is because the resource could have been in the pending requests
queue in ResourceLoadScheduler and would have missed out on state changes to this flag
happening from DocumentLoader::setDefersCallbacks().

* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::init):

Canonical link: https://commits.webkit.org/97941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110349 268f45cc-cd09-0410-ab3c-d52691b4dbfc